# tree-sitter-parol

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-parol.pc.in
bindings/c/tree_sitter/: tree-sitter-parol.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_parol/: binding.c
bindings/python/tree_sitter_tree_sitter_parol/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterParolTests/: TreeSitterParolTests.swift
bindings/swift/TreeSitterTreeSitterParol/: tree_sitter_parol.h
bindings/swift/TreeSitterTreeSitterParolTests/: TreeSitterTreeSitterParolTests.swift
src/: grammar.json  node-types.json  parser.c
