[package]
name = "tree-sitter-tree-sitter-parol"
description = "Tree-sitter parser for parol language"
version = "0.1.0"
authors = ["Joerg Singer <singer.joerg@gmx.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-parol"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jsinger67/parol"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
